; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/libdb/extr_tcpip.c_tcpip_tmr_needed.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/libdb/extr_tcpip.c_tcpip_tmr_needed.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@tcpip_time = common dso_local global i64 0, align 8
@uip_tcp_active_pcbs = common dso_local global i64 0, align 8
@uip_tcp_tw_pcbs = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @tcpip_tmr_needed() #0 {
  %1 = load i64, i64* @tcpip_time, align 8
  %2 = icmp ne i64 %1, 0
  br i1 %2, label %11, label %3

3:                                                ; preds = %0
  %4 = load i64, i64* @uip_tcp_active_pcbs, align 8
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %9, label %6

6:                                                ; preds = %3
  %7 = load i64, i64* @uip_tcp_tw_pcbs, align 8
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %11

9:                                                ; preds = %6, %3
  %10 = call i64 (...) @gettime()
  store i64 %10, i64* @tcpip_time, align 8
  br label %11

11:                                               ; preds = %9, %6, %0
  ret void
}

declare dso_local i64 @gettime(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
